# extractous

./: AGENTS.md  README.md  README_CN.md
.github/workflows/: ci.yml  install-graalvm-tar.sh  release.yml
bindings/extractous-python/: Cargo.toml  Dockerfile  README.md  README_CN.md  build-inside-docker.sh  build-wheels.sh  pyproject.toml
bindings/extractous-python/src/: extractor.rs  lib.rs
bindings/extractous-python/tests/: test_extract_file_recursive.py  utils.py
extractous-core/: Cargo.toml  README.md  README_CN.md
extractous-core/benches/: extractor.rs
extractous-core/examples/: debug_test.rs
extractous-core/src/: extractor.rs  lib.rs
extractous-core/src/tika/: parse.rs  wrappers.rs
extractous-core/tests/: extract_recursive_tests.rs  extract_to_xml_tests.rs
extractous-core/tika-native/: build.gradle
extractous-core/tika-native/gradle/wrapper/: gradle-wrapper.properties
extractous-core/tika-native/src/graalvm/java/ai/yobix/: TikaNativeGraalEntryPoint.java
extractous-core/tika-native/src/main/java/ai/yobix/: ParsingReader.java  RecursiveResult.java  TikaNativeMain.java
extractous-core/tika-native/src/test/java/ai/yobix/: DebugTest.java  TikaNativeMainTest.java
