[package]
name = "extractous"
version = "0.3.1"
edition = "2021"

description = """
Extractous provides a fast and efficient way to extract content from all kind of file formats including PDF, Word, Excel
CSV, Email etc... Internally it uses a natively compiled Apache Tika for formats are not supported natively by the Rust
core
"""
license = "Apache-2.0"
homepage = "https://extractous.yobix.ai"
repository = "https://github.com/yobix-ai/extractous"
authors = ["Yobix AI <dev@yobix.ai>"]
readme = "README.md"
keywords = ["unstructured", "tika", "text", "pdf", "parser"]
categories = ["parsing", "text-processing"]

[[bench]]
name = "extractor"
harness = false
required-features = []

[dependencies]
libc = { version = "1.0.0-alpha.1" }
jni = { version = "0.21.1",features = ["invocation"] }
thiserror = { version = "2.0.17" }
bytemuck =  { version = "1.24.0"}
# String enums
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }

[dev-dependencies]
textdistance = "1.1.1"
test-case = "3.3.1"
criterion = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
quick-xml = "0.38.3"

[build-dependencies]
fs_extra = { version = "1.3.0" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
zip = "6.0.0"
flate2 = "1.1.4"
tar = "0.4.44"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = "thin"
rpath = true
